refactor: modulariza openapi com .js
