# backend/swagger-setup/openapi.json
@@ -1,258 +1,258 @@
 {
-  "openapi": "3.1.0",
-  "servers": [
-    {
-      "url": "http://localhost:5000",
-      "summary": "Servidor de desenvolvimento estritamente local"
-    }
-  ],
-
-  "info": {
-    "version": "1.0.0",
-    "title": "Irrigador Automático - API",
-    "description": "Documentação da aplicação de um Irrigador Automático. Tem como objetivo auxiliar no controle de informações e especificações de irrigação do usuário, possibilitando maior flexibilidade.\n\nDesenvolvido por: Ramo Estudantil IEEE - WolfByte(Web)",
-    "contact": {
-      "name": "Projeto Bower - WolfByte",
-      "email": "gustavoandrade0125@gmail.com"
-    },
-    "termsOfService": "---",
-    "license": {
-      "name": "Licença de Uso",
-      "identifier": "---"
-    }
-  },
-
-  "externalDocs":{
-    "description": "Documentos adicionais",
-    "url": "---"
-  },
-
-  "tags": [
-    {
-      "name": "Usuário",
-      "description": "Serviços de gestão e identificação de usuários"
-    },
-    {
-      "name": "Jardim",
-      "description": "Serviços de gestão dos jardins do usuário"
-    },
-    {
-      "name": "Configuração de Irrigação",
-      "description": "Serviços de gestão das configurações de irrigação"
-    },
-    {
-      "name": "Histórico de Irrigação",
-      "description": "Serviços visualização de históricos de irrigação"
-    }
-  ],
-  
-  "paths": {
-
-    "/users": {
-
-      "get": {
-        "summary": "Visualização de todos os usuários do sistema",
-        "parameters": [],
-        "security": [
-          {
-            "BearerAuth": []
-          }
-        ],
-        "tags": ["Usuário"],
-        "responses": {
-          "200": {
-            "description": "Resultado esperado",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/ResponseUsuario"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Requisição Inválida",
-            "content": {
-              "application/json": {
-                "schema": {
-                    "$ref": "#/components/schemas/ErrorResponse400"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Token inválido.",
-            "content": {
-              "application/json": {
-                "schema": {
-                    "$ref": "#/components/schemas/ErrorResponse401"
-                }
-              }
-            }
-          }
+    "openapi": "3.1.0",
+    "servers": [
+      {
+        "url": "http://localhost:5000",
+        "description": "Servidor de desenvolvimento local"
       }
-    }
+    ],
+  
+    "info": {
+      "version": "1.0.0",
+      "title": "Irrigador Automático - API",
+      "summary": "Documentação da aplicação de um Irrigador Automático. Tem como objetivo auxiliar no controle de informações e especificações de irrigação do usuário, possibilitando maior flexibilidade.\n\nDesenvolvido por: Ramo Estudantil IEEE - WolfByte(Web)",
+      "contact": {
+        "name": "Projeto Bower - WolfByte",
+        "email": "gustavoandrade0125@gmail.com"
+      },
+      "termsOfService": "---",
+      "license": {
+        "name": "Licença de Uso",
+        "identifier": "---"
+      }
     },
-
-    "/user": {
-
-      "post": {
-        "summary": "Cadastro de um usuário",
-        "parameters": [],
-        "tags": ["Usuário"],
-        "requestBody": {
-          "description": "Dados do usuário",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RequestUsuario"
-              }
+  
+    "externalDocs":{
+      "description": "Documentos adicionais",
+      "url": "---"
+    },
+  
+    "tags": [
+      {
+        "name": "Usuário",
+        "description": "Serviços de gestão e identificação de usuários"
+      },
+      {
+        "name": "Jardim",
+        "description": "Serviços de gestão dos jardins do usuário"
+      },
+      {
+        "name": "Configuração de Irrigação",
+        "description": "Serviços de gestão das configurações de irrigação"
+      },
+      {
+        "name": "Histórico de Irrigação",
+        "description": "Serviços visualização de históricos de irrigação"
+      }
+    ],
+    
+    "paths": {
+  
+      "/users": {
+  
+        "get": {
+          "summary": "Visualização de todos os usuários do sistema",
+          "parameters": [],
+          "security": [
+            {
+              "BearerAuth": []
             }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Resultado esperado",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Usuário cadastrado"
+          ],
+          "tags": ["Usuário"],
+          "responses": {
+            "200": {
+              "description": "Resultado esperado",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/components/schemas/ResponseUsuario"
                     }
                   }
                 }
               }
+            },
+            "400": {
+              "description": "Requisição Inválida",
+              "content": {
+                "application/json": {
+                  "schema": {
+                      "$ref": "#/components/schemas/ErrorResponse400"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Token inválido.",
+              "content": {
+                "application/json": {
+                  "schema": {
+                      "$ref": "#/components/schemas/ErrorResponse401"
+                  }
+                }
+              }
             }
-          },
-          "400": {
-            "description": "Requisição Inválida",
+        }
+      }
+      },
+  
+      "/user": {
+  
+        "post": {
+          "summary": "Cadastro de um usuário",
+          "parameters": [],
+          "tags": ["Usuário"],
+          "requestBody": {
+            "description": "Dados do usuário",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse400"
+                  "$ref": "#/components/schemas/RequestUsuario"
+                }
+              }
+            }
+          },
+          "responses": {
+            "200": {
+              "description": "Resultado esperado",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "message": {
+                        "type": "string",
+                        "example": "Usuário cadastrado"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Requisição Inválida",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "$ref": "#/components/schemas/ErrorResponse400"
+                  }
                 }
               }
             }
           }
         }
       }
-    }
-  },
-  
-  "components": {
-    "schemas": {
-        
-      "ErrorResponse400": {
-        "type": "object",
-        "properties": {
-          "msg": {
-            "type": "string",
-            "description": "Mensagem de erro",
-            "example": "Token não identificado"
-          }
-        }
-      },
-      
-      "ErrorResponse401": {
-        "type": "object",
-        "properties": {
-          "err": {
-            "type": "string",
-            "description": "Descrição do erro",
-            "example": "Token inválido"
-          }
-        }
-      },
-
-      "ResponseUsuario": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "description": "Código de Identificação do Usuário",
-            "format": "int64"
-          },
-          "name": {
-            "type": "string",
-            "description": "Nome do usuário",
-              "example": "João Pedro"
-            },
-          "email": {
-            "type": "string",
-            "description": "E-mail do usuário",
-            "format": "email"
-          },
-          "code": {
-            "type": "integer",
-            "description": "Código de verificação da senha",
-            "example": 12335
-          },
-          "expirationDate": {
-            "type": "string",
-            "description": "Data de validade do código de verificação",
-            "format": "date-time"
-          },
-          "humidityNotification": {
-            "type": "int8",
-            "description": "Permissão de notificação de humidade - Default: 1",
-            "enum":[0,1],
-            "example": 1
-          },
-          "waterNotification": {
-            "type": "int8",
-            "description": "Permissão de notificação de humidade - Default: 1",
-            "enum":[0,1],
-            "example": 1
-          }
-        }
-      },
-
-      "RequestUsuario": {
-        "type": "object",
+    },
+    
+    "components": {
+      "schemas": {
+          
+        "ErrorResponse400": {
+          "type": "object",
           "properties": {
-          "name": {
-            "type": "string",
-            "description": "Nome do usuário",
-            "example": "João Pedro"
-          },
-          "email": {
-            "type": "string",
-            "description": "E-mail do usuário",
-            "format": "email"
-          },
-          "password": {
-            "type": "string",
-            "description": "Senha do usuárop",
-            "example":"HuP.45##"
-          },
-          "humidityNotification": {
-            "type": "boolean",
-            "description": "Permissão de notificação de humidade - Default: true",
-            "example": "true"
-          },
-          "waterNotification": {
-            "type": "boolean",
-            "description": "Permissão de notificação de humidade - Default: true",
-            "example": "false"
+            "msg": {
+              "type": "string",
+              "description": "Mensagem de erro",
+              "example": "Token não identificado"
+            }
           }
         },
-        "required":[
-          "name","email","password"
-        ]
+        
+        "ErrorResponse401": {
+          "type": "object",
+          "properties": {
+            "err": {
+              "type": "string",
+              "description": "Descrição do erro",
+              "example": "Token inválido"
+            }
+          }
+        },
+  
+        "ResponseUsuario": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "description": "Código de Identificação do Usuário",
+              "format": "int64"
+            },
+            "name": {
+              "type": "string",
+              "description": "Nome do usuário",
+                "example": "João Pedro"
+              },
+            "email": {
+              "type": "string",
+              "description": "E-mail do usuário",
+              "format": "email"
+            },
+            "code": {
+              "type": "integer",
+              "description": "Código de verificação da senha",
+              "example": 12335
+            },
+            "expirationDate": {
+              "type": "string",
+              "description": "Data de validade do código de verificação",
+              "format": "date-time"
+            },
+            "humidityNotification": {
+              "type": "int8",
+              "description": "Permissão de notificação de humidade - Default: 1",
+              "enum":[0,1],
+              "example": 1
+            },
+            "waterNotification": {
+              "type": "int8",
+              "description": "Permissão de notificação de humidade - Default: 1",
+              "enum":[0,1],
+              "example": 1
+            }
+          }
+        },
+  
+        "RequestUsuario": {
+          "type": "object",
+            "properties": {
+            "name": {
+              "type": "string",
+              "description": "Nome do usuário",
+              "example": "João Pedro"
+            },
+            "email": {
+              "type": "string",
+              "description": "E-mail do usuário",
+              "format": "email"
+            },
+            "password": {
+              "type": "string",
+              "description": "Senha do usuárop",
+              "example":"HuP.45##"
+            },
+            "humidityNotification": {
+              "type": "boolean",
+              "description": "Permissão de notificação de humidade - Default: true",
+              "example": "true"
+            },
+            "waterNotification": {
+              "type": "boolean",
+              "description": "Permissão de notificação de humidade - Default: true",
+              "example": "false"
+            }
+          },
+          "required":[
+            "name","email","password"
+          ]
+        }
+    },
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
       }
-  },
-  "securitySchemes": {
-    "BearerAuth": {
-      "type": "http",
-      "scheme": "bearer",
-      "bearerFormat": "JWT"
     }
-  }
-  } 
+}
 }
