# backend/swagger-setup/schemas/securitySchemes.js
@@ -1,0 +1,7 @@
+module.exports = {
+    BearerAuth: {
+      type: "http",
+        scheme: "bearer",
+        bearerFormat: "JWT",
+    }
+}
